Change: save o3 to eqmodel files.

--- a/WorkingScripts/o3_download_building_structure.ipynb
+++ b/WorkingScripts/o3_download_building_structure.ipynb
@@ -26,6 +26,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check if directory exist if not make it, return path\n",
+    "def make_data_path():\n",
+    "    cwd = os.getcwd()\n",
+    "    parent = os.path.dirname(cwd)\n",
+    "    data_path = os.path.join(parent, 'Data')\n",
+    "    if not os.path.exists(data_path):\n",
+    "        os.makedirs(data_path)\n",
+    "    \n",
+    "    building_data_csv = os.path.join(data_path, 'building_data_csv')\n",
+    "    building_data_gdb = os.path.join(data_path, 'building_data_gdb')\n",
+    "    building_stock_data = os.path.join(data_path, 'building_stock_data')\n",
+    "    if not os.path.exists(building_data_csv):\n",
+    "        os.makedirs(building_data_csv)\n",
+    "    if not os.path.exists(building_data_gdb):\n",
+    "        os.makedirs(building_data_gdb)\n",
+    "    if not os.path.exists(building_stock_data):\n",
+    "        os.makedirs(building_stock_data)\n",
+    "\n",
+    "    return building_data_csv, building_data_gdb, building_stock_data"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -66,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +187,7 @@
        " 'Wyoming': 'https://fema-femadata.s3.amazonaws.com/Partners/ORNL/USA_Structures/Wyoming/Deliverable20230728WY.zip'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,11 +280,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_building_data_directory(stateid):\n",
+    "def gdb_path_by_state(stateid):\n",
     "    cwd = os.getcwd()\n",
     "\n",
     "    # get parent directory\n",
@@ -272,24 +299,10 @@
     "    return os.path.join(building_data_directory, stateid_dir, f'{stateid}_Structures.gdb')\n",
     "\n",
     "def get_building_data_csv(stateid):\n",
-    "    building_data_directory = get_building_data_directory(stateid)\n",
+    "    building_data_directory = os.path.join(os.path.dirname(os.getcwd()), 'Data', 'building_data_csv')\n",
     "\n",
     "    # get the csv file\n",
-    "    return os.path.join(building_data_directory, f'{stateid}.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# if false makedir\n",
-    "def create_directory_if_not_exists(directory):\n",
-    "    if not os.path.exists(directory):\n",
-    "        os.makedirs(directory)\n",
-    "    else:\n",
-    "        print(f\"Directory {directory} already exists.\")"
+    "    return os.path.join(building_data_directory, f'{stateid}_building_data.csv')"
    ]
   },
   {
@@ -308,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,20 +330,20 @@
     "    # if not, check if the gdb file exists\n",
     "    # if exists, read it\n",
     "def read_building_data(stateid):\n",
-    "    building_data_directory = get_building_data_directory(stateid)\n",
+    "    building_data_directory = gdb_path_by_state(stateid)\n",
     "\n",
     "    # get the csv file\n",
     "    csv_path = get_building_data_csv(stateid)\n",
     "\n",
     "    if os.path.exists(csv_path):\n",
     "        print(f\"Reading {csv_path}\")\n",
-    "        return gpd.read_file(csv_path)\n",
+    "        return 'csv', gpd.read_file(csv_path)\n",
     "    else:\n",
     "        print(f\"{csv_path} does not exist.\")\n",
     "        gdb_path = os.path.join(building_data_directory)\n",
     "        if os.path.exists(gdb_path):\n",
     "            print(f\"Reading {gdb_path}\")\n",
-    "            return read_cols(gdb_path)\n",
+    "            return 'gdb', read_cols(gdb_path)\n",
     "        else:\n",
     "            print(f\"{gdb_path} does not exist.\")\n",
     "            print(\"Please download the gdb file from the USGS website.\")"
@@ -338,12 +351,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "states_data = [\n",
-    "    #(\"Alabama\", \"AL\"), (\"Alaska\", \"AK\"), (\"Arizona\", \"AZ\"), (\"Arkansas\", \"AR\"),\n",
+    "    (\"Alabama\", \"AL\"), (\"Alaska\", \"AK\"), (\"Arizona\", \"AZ\"), (\"Arkansas\", \"AR\"),\n",
     "    (\"California\", \"CA\"), (\"Colorado\", \"CO\"), (\"Connecticut\", \"CT\"), (\"Delaware\", \"DE\"),\n",
     "    (\"Florida\", \"FL\"), (\"Georgia\", \"GA\"), (\"Hawaii\", \"HI\"), (\"Idaho\", \"ID\"),\n",
     "    (\"Illinois\", \"IL\"), (\"Indiana\", \"IN\"), (\"Iowa\", \"IA\"), (\"Kansas\", \"KS\"),\n",
@@ -404,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +430,8 @@
     "    # Flatten MultiIndex columns\n",
     "    df_pivot.columns = [f\"{col[0]}_{col[1]}\" for col in df_pivot.columns]\n",
     "    df_pivot = df_pivot.reset_index()\n",
-    "\n",
+    "    df_pivot['TOTAL_RESIDENTIAL'] = df_pivot['RESIDENTIAL_MULTI FAMILY'] + df_pivot['RESIDENTIAL_SINGLE FAMILY'] + df_pivot['RESIDENTIAL_OTHER']\n",
+    "    df_pivot['TOTAL_BUILDING'] = df_pivot['TOTAL_RESIDENTIAL'] + df_pivot['OTHER_OTHER']\n",
     "    return df_pivot"
    ]
   },
@@ -427,72 +441,207 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for state in states_data:\n",
-    "    state_name, stateid = state\n",
-    "    print(f\"Reading building data for {state_name}\")\n",
-    "    gdf = read_building_data(stateid)\n",
-    "    if gdf is not None:\n",
-    "        count_building_data = aggregate_building_counts(gdf)\n",
-    "        df_pivot = pivot_building_data(count_building_data)\n",
-    "        output_dir = os.path.join(os.path.dirname(os.getcwd()), 'Data', 'building_data_csv')\n",
-    "        create_directory_if_not_exists(output_dir)\n",
-    "        output_path = os.path.join(output_dir, f\"{stateid}_building_data.csv\")\n",
-    "        df_pivot.to_csv(output_path, index=False)\n",
-    "        print(f\"Saved building data for {state_name} to {output_path}\")"
+    "state_name, stateid = (\"California\", \"CA\")\n",
+    "print(f\"Reading building data for {state_name}\")\n",
+    "filetype, gdf = read_building_data(stateid)\n",
+    "if filetype == 'csv':\n",
+    "    pass\n",
+    "elif filetype == 'gdb':\n",
+    "    count_building_data = aggregate_building_counts(gdf)\n",
+    "    df_pivot = pivot_building_data(count_building_data)\n",
+    "    output_path = os.path.join(os.path.dirname(os.getcwd()), 'Data', 'building_data_csv', f\"{stateid}_building_data.csv\")\n",
+    "    df_pivot.to_csv(output_path, index=False)\n",
+    "    print(f\"Saved building data for {state_name} to {output_path}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading building data for California\n",
-      "/Users/yusufpradana/Library/CloudStorage/OneDrive-Personal/Gradschool/4_SPRING25/Capstone/github/EarthquakeDamageModel_Heinz/Data/building_data_gdb/Deliverable20230728CA/CA_Structures.gdb/CA.csv does not exist.\n",
-      "Reading /Users/yusufpradana/Library/CloudStorage/OneDrive-Personal/Gradschool/4_SPRING25/Capstone/github/EarthquakeDamageModel_Heinz/Data/building_data_gdb/Deliverable20230728CA/CA_Structures.gdb\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/26/f5bmf46n06g2nxwv03lg4yxm0000gn/T/ipykernel_65276/889102502.py:11: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  building_data['OCC_CLS'] = building_data['OCC_CLS'].map(mapping)\n",
-      "/var/folders/26/f5bmf46n06g2nxwv03lg4yxm0000gn/T/ipykernel_65276/889102502.py:17: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  building_data['PRIM_OCC'] = building_data['PRIM_OCC'].map(mapping)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved building data for California to /Users/yusufpradana/Library/CloudStorage/OneDrive-Personal/Gradschool/4_SPRING25/Capstone/github/EarthquakeDamageModel_Heinz/Data/building_data_csv/CA_building_data.csv\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CENSUSCODE</th>\n",
+       "      <th>OTHER_OTHER</th>\n",
+       "      <th>RESIDENTIAL_MULTI FAMILY</th>\n",
+       "      <th>RESIDENTIAL_OTHER</th>\n",
+       "      <th>RESIDENTIAL_SINGLE FAMILY</th>\n",
+       "      <th>TOTAL_RESIDENTIAL</th>\n",
+       "      <th>TOTAL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>06001400100</td>\n",
+       "      <td>104</td>\n",
+       "      <td>22</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1162</td>\n",
+       "      <td>1194</td>\n",
+       "      <td>1298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>06001400200</td>\n",
+       "      <td>46</td>\n",
+       "      <td>110</td>\n",
+       "      <td>2</td>\n",
+       "      <td>538</td>\n",
+       "      <td>650</td>\n",
+       "      <td>696</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>06001400300</td>\n",
+       "      <td>67</td>\n",
+       "      <td>416</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1139</td>\n",
+       "      <td>1562</td>\n",
+       "      <td>1629</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>06001400400</td>\n",
+       "      <td>57</td>\n",
+       "      <td>391</td>\n",
+       "      <td>3</td>\n",
+       "      <td>777</td>\n",
+       "      <td>1171</td>\n",
+       "      <td>1228</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>06001400500</td>\n",
+       "      <td>56</td>\n",
+       "      <td>342</td>\n",
+       "      <td>6</td>\n",
+       "      <td>614</td>\n",
+       "      <td>962</td>\n",
+       "      <td>1018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9108</th>\n",
+       "      <td>06115040902</td>\n",
+       "      <td>759</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>759</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9109</th>\n",
+       "      <td>06115041001</td>\n",
+       "      <td>579</td>\n",
+       "      <td>90</td>\n",
+       "      <td>360</td>\n",
+       "      <td>1807</td>\n",
+       "      <td>2257</td>\n",
+       "      <td>2836</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9110</th>\n",
+       "      <td>06115041002</td>\n",
+       "      <td>270</td>\n",
+       "      <td>155</td>\n",
+       "      <td>628</td>\n",
+       "      <td>1771</td>\n",
+       "      <td>2554</td>\n",
+       "      <td>2824</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9111</th>\n",
+       "      <td>06115041101</td>\n",
+       "      <td>373</td>\n",
+       "      <td>86</td>\n",
+       "      <td>596</td>\n",
+       "      <td>903</td>\n",
+       "      <td>1585</td>\n",
+       "      <td>1958</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9112</th>\n",
+       "      <td>06115041102</td>\n",
+       "      <td>189</td>\n",
+       "      <td>67</td>\n",
+       "      <td>354</td>\n",
+       "      <td>474</td>\n",
+       "      <td>895</td>\n",
+       "      <td>1084</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9113 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       CENSUSCODE  OTHER_OTHER  RESIDENTIAL_MULTI FAMILY  RESIDENTIAL_OTHER  \\\n",
+       "0     06001400100          104                        22                 10   \n",
+       "1     06001400200           46                       110                  2   \n",
+       "2     06001400300           67                       416                  7   \n",
+       "3     06001400400           57                       391                  3   \n",
+       "4     06001400500           56                       342                  6   \n",
+       "...           ...          ...                       ...                ...   \n",
+       "9108  06115040902          759                         0                  0   \n",
+       "9109  06115041001          579                        90                360   \n",
+       "9110  06115041002          270                       155                628   \n",
+       "9111  06115041101          373                        86                596   \n",
+       "9112  06115041102          189                        67                354   \n",
+       "\n",
+       "      RESIDENTIAL_SINGLE FAMILY  TOTAL_RESIDENTIAL  TOTAL  \n",
+       "0                          1162               1194   1298  \n",
+       "1                           538                650    696  \n",
+       "2                          1139               1562   1629  \n",
+       "3                           777               1171   1228  \n",
+       "4                           614                962   1018  \n",
+       "...                         ...                ...    ...  \n",
+       "9108                          0                  0    759  \n",
+       "9109                       1807               2257   2836  \n",
+       "9110                       1771               2554   2824  \n",
+       "9111                        903               1585   1958  \n",
+       "9112                        474                895   1084  \n",
+       "\n",
+       "[9113 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "state_name, stateid = (\"California\", \"CA\")\n",
-    "print(f\"Reading building data for {state_name}\")\n",
-    "gdf = read_building_data(stateid)\n",
-    "if gdf is not None:\n",
-    "    count_building_data = aggregate_building_counts(gdf)\n",
-    "    df_pivot = pivot_building_data(count_building_data)\n",
-    "    output_dir = os.path.join(os.path.dirname(os.getcwd()), 'Data', 'building_data_csv')\n",
-    "    create_directory_if_not_exists(output_dir)\n",
-    "    output_path = os.path.join(output_dir, f\"{stateid}_building_data.csv\")\n",
-    "    df_pivot.to_csv(output_path, index=False)\n",
-    "    print(f\"Saved building data for {state_name} to {output_path}\")"
+    "df_pivot\n"
    ]
   }
  ],
