--- a/WorkingScripts/o3_download_building_structure.ipynb
+++ b/WorkingScripts/o3_download_building_structure.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,12 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# check if directory exist if not make it, return path\n",
     "def make_data_path():\n",
+    "    \"\"\"Create directories for data storage if they do not exist.\"\"\"\n",
     "    cwd = os.getcwd()\n",
     "    parent = os.path.dirname(cwd)\n",
     "    data_path = os.path.join(parent, 'Data')\n",
@@ -68,15 +69,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# URL of the webpage to scrape\n",
-    "url = \"https://disasters.geoplatform.gov/USA_Structures/\"\n",
-    "\n",
     "def fetch_state_links():\n",
     "    \"\"\"Fetches state names and their corresponding links from the webpage.\"\"\"\n",
+    "   \n",
+    "    # URL of the webpage to scrape\n",
+    "    url = \"https://disasters.geoplatform.gov/USA_Structures/\"\n",
     "    response = requests.get(url)\n",
     "    if response.status_code == 200:\n",
     "        soup = BeautifulSoup(response.text, \"html.parser\")\n",
@@ -93,12 +94,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def download_and_extract_zip(state_name, state_links):\n",
-    "    \"\"\"Downloads and extracts a ZIP file from the given URL.\"\"\"\n",
+    "    \"\"\"Downloads and extracts a ZIP file from the given URL.\n",
+    "    Keyword arguments:\n",
+    "    state_name -- Name of the state\n",
+    "    state_links -- Corresponding links for each state\n",
+    "    \"\"\"\n",
     "    url = get_link_by_state(state_name, state_links)\n",
     "    parent_dir = os.path.dirname(os.getcwd())\n",
     "    output_dir = os.path.join(parent_dir, 'Data', 'building_data_gdb')\n",
@@ -123,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +192,7 @@
        " 'Wyoming': 'https://fema-femadata.s3.amazonaws.com/Partners/ORNL/USA_Structures/Wyoming/Deliverable20230728WY.zip'}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,11 +285,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def gdb_path_by_state(stateid):\n",
+    "    \"\"\"Returns the path to the GDB file for a given state ID.\"\"\"\n",
     "    cwd = os.getcwd()\n",
     "\n",
     "    # get parent directory\n",
@@ -299,6 +305,7 @@
     "    return os.path.join(building_data_directory, stateid_dir, f'{stateid}_Structures.gdb')\n",
     "\n",
     "def get_building_data_csv(stateid):\n",
+    "    \"\"\"Returns the path to the CSV file for a given state ID.\"\"\"\n",
     "    building_data_directory = os.path.join(os.path.dirname(os.getcwd()), 'Data', 'building_data_csv')\n",
     "\n",
     "    # get the csv file\n",
@@ -307,12 +314,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read only the specified columns\n",
     "def read_cols(path):\n",
+    "    \"\"\"Read the GDB file and return a GeoDataFrame with specified columns.\"\"\"\n",
+    "    \n",
     "    cols = ['BUILD_ID', 'OCC_CLS', 'PRIM_OCC', 'CENSUSCODE', 'LONGITUDE', 'LATITUDE']\n",
     "    return gpd.read_file(path, columns=cols)\n",
     "    \n",
@@ -321,37 +330,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check if a csv file for a state is exists\n",
-    "    # if exists, read it\n",
-    "    # if not, check if the gdb file exists\n",
-    "    # if exists, read it\n",
     "def read_building_data(stateid):\n",
+    "    \"\"\"Check if the aggregated csv file exists for the given state ID.\n",
+    "    If it does, return the file type and None. Do nothing.\n",
+    "    If it does not, read the GDB file for the state and return the file type and the GeoDataFrame.\n",
+    "    Kwargs:\n",
+    "    stateid -- State ID\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # gdb file path\n",
     "    building_data_directory = gdb_path_by_state(stateid)\n",
     "\n",
     "    # get the csv file\n",
     "    csv_path = get_building_data_csv(stateid)\n",
-    "\n",
     "    if os.path.exists(csv_path):\n",
-    "        print(f\"Reading {csv_path}\")\n",
-    "        return 'csv', gpd.read_file(csv_path)\n",
+    "        print(f\"Aggregated csv file found for {stateid}\")\n",
+    "        return 'csv', None\n",
+    "\n",
     "    else:\n",
-    "        print(f\"{csv_path} does not exist.\")\n",
-    "        gdb_path = os.path.join(building_data_directory)\n",
-    "        if os.path.exists(gdb_path):\n",
-    "            print(f\"Reading {gdb_path}\")\n",
-    "            return 'gdb', read_cols(gdb_path)\n",
-    "        else:\n",
-    "            print(f\"{gdb_path} does not exist.\")\n",
-    "            print(\"Please download the gdb file from the USGS website.\")"
+    "        print(f\"Reading {building_data_directory}\")\n",
+    "        return 'gdb', read_cols(building_data_directory)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,12 +388,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# function to remap OCC_CLS and PRIM_OCC\n",
     "def remap_occupancy_classes(gdf):\n",
+    "    \"\"\"Remap the occupancy classes and primary occupancy from GDB files.\n",
+    "    Kwargs:\n",
+    "    gdf -- GeoDataFrame read from the GDB file\"\"\"\n",
+    "\n",
     "    # Define the mapping dictionaries\n",
     "    building_data = gdf[['BUILD_ID', 'OCC_CLS', 'PRIM_OCC', 'CENSUSCODE', 'LONGITUDE', 'LATITUDE']]\n",
     "    # mapping the occupancy class\n",
@@ -417,11 +428,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pivot_building_data(count_building_data):\n",
+    "    \"\"\"Pivot the building data to get the count of buildings by OCC_CLS and PRIM_OCC.\n",
+    "    Kwargs:\n",
+    "    count_building_data -- DataFrame with building counts aggregated by CENSUS CODE, OCC_CLS and PRIM_OCC\n",
+    "    \"\"\"\n",
+    "\n",
     "    df = count_building_data.copy()\n",
     "\n",
     "    # Create a pivot table\n",
@@ -437,11 +453,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading building data for Alaska\n",
+      "Reading /Users/yusufpradana/Library/CloudStorage/OneDrive-Personal/Gradschool/4_SPRING25/Capstone/github/EarthquakeDamageModel_Heinz/Data/building_data_gdb/Deliverable202496AL/AL_Structures.gdb\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/26/f5bmf46n06g2nxwv03lg4yxm0000gn/T/ipykernel_31767/1288599890.py:15: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  building_data['OCC_CLS'] = building_data['OCC_CLS'].map(mapping)\n",
+      "/var/folders/26/f5bmf46n06g2nxwv03lg4yxm0000gn/T/ipykernel_31767/1288599890.py:21: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  building_data['PRIM_OCC'] = building_data['PRIM_OCC'].map(mapping)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved building data for Alaska to /Users/yusufpradana/Library/CloudStorage/OneDrive-Personal/Gradschool/4_SPRING25/Capstone/github/EarthquakeDamageModel_Heinz/Data/building_data_csv/AL_building_data.csv\n"
+     ]
+    }
+   ],
    "source": [
-    "state_name, stateid = (\"California\", \"CA\")\n",
+    "state_name, stateid = (\"Alaska\", \"AL\")\n",
     "print(f\"Reading building data for {state_name}\")\n",
     "filetype, gdf = read_building_data(stateid)\n",
     "if filetype == 'csv':\n",
@@ -456,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +536,7 @@
        "      <th>RESIDENTIAL_OTHER</th>\n",
        "      <th>RESIDENTIAL_SINGLE FAMILY</th>\n",
        "      <th>TOTAL_RESIDENTIAL</th>\n",
-       "      <th>TOTAL</th>\n",
+       "      <th>TOTAL_BUILDING</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -619,23 +669,23 @@
        "9111  06115041101          373                        86                596   \n",
        "9112  06115041102          189                        67                354   \n",
        "\n",
-       "      RESIDENTIAL_SINGLE FAMILY  TOTAL_RESIDENTIAL  TOTAL  \n",
-       "0                          1162               1194   1298  \n",
-       "1                           538                650    696  \n",
-       "2                          1139               1562   1629  \n",
-       "3                           777               1171   1228  \n",
-       "4                           614                962   1018  \n",
-       "...                         ...                ...    ...  \n",
-       "9108                          0                  0    759  \n",
-       "9109                       1807               2257   2836  \n",
-       "9110                       1771               2554   2824  \n",
-       "9111                        903               1585   1958  \n",
-       "9112                        474                895   1084  \n",
+       "      RESIDENTIAL_SINGLE FAMILY  TOTAL_RESIDENTIAL  TOTAL_BUILDING  \n",
+       "0                          1162               1194            1298  \n",
+       "1                           538                650             696  \n",
+       "2                          1139               1562            1629  \n",
+       "3                           777               1171            1228  \n",
+       "4                           614                962            1018  \n",
+       "...                         ...                ...             ...  \n",
+       "9108                          0                  0             759  \n",
+       "9109                       1807               2257            2836  \n",
+       "9110                       1771               2554            2824  \n",
+       "9111                        903               1585            1958  \n",
+       "9112                        474                895            1084  \n",
        "\n",
        "[9113 rows x 7 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
