Fix bug on download and aggregating building Data

--- a/WorkingScripts/o3_get_building_structure.ipynb
+++ b/WorkingScripts/o3_get_building_structure.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,8 +302,21 @@
     "        dfs.append(df)\n",
     "    # concatenate the dataframes\n",
     "    building_data = pd.concat(dfs, ignore_index=True)\n",
+    "\n",
+    "    # drop OTHER_SINGLE FAMILY\n",
+    "    building_data = building_data.drop(columns=['OTHER_SINGLE FAMILY'], errors='ignore')\n",
+    "    \n",
     "    # save the building data to a csv file\n",
     "    building_data.to_csv(os.path.join(path, 'aggregated_building_data.csv'), index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aggregate_building_data()"
    ]
   },
   {
