convert notebook to script format

--- a/WorkingScripts/o3_get_building_structure.ipynb
+++ b/WorkingScripts/o3_get_building_structure.ipynb
@@ -312,15 +312,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aggregate_building_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
    "outputs": [],
@@ -376,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +428,11 @@
     }
    ],
    "source": [
-    "o3_get_building_structures()"
+    "if __name__ == \"__main__\":\n",
+    "    # make the data path\n",
+    "    building_data_csv, building_data_gdb, building_stock_data = make_data_path()\n",
+    "    # download and extract the building data\n",
+    "    o3_get_building_structures()"
    ]
   }
  ],
