Add total building count in o3_get_building_structure

--- a/WorkingScripts/o3_get_building_structure.ipynb
+++ b/WorkingScripts/o3_get_building_structure.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,6 +305,9 @@
     "\n",
     "    # drop OTHER_SINGLE FAMILY\n",
     "    building_data = building_data.drop(columns=['OTHER_SINGLE FAMILY'], errors='ignore')\n",
+    "\n",
+    "    # sum all building\n",
+    "    building_data['TOTAL_BUILDING_COUNT'] = building_data['OTHER_OTHER']+building_data['RESIDENTIAL_MULTI FAMILY']+building_data['RESIDENTIAL_OTHER']+building_data['RESIDENTIAL_SINGLE FAMILY']\n",
     "    \n",
     "    # save the building data to a csv file\n",
     "    building_data.to_csv(os.path.join(path, 'aggregated_building_data.csv'), index=False)"
