add csv save file

--- a/WorkingScripts/o3_clip_eventdata_buildingstocks.ipynb
+++ b/WorkingScripts/o3_clip_eventdata_buildingstocks.ipynb
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,14 @@
     "    print(\"6. Saving final output to GeoPackage...\")\n",
     "    layer_name = \"tract_shakemap_pga\"\n",
     "    save_to_geopackage(final_output, layer_name, eventid)\n",
-    "    print(f\"Building clip analysis completed for event ID: {eventid}\")"
+    "    print(f\"Building clip analysis completed for event ID: {eventid}\")\n",
+    "\n",
+    "    # 7. Save the final output to a CSV file\n",
+    "    print(\"Saving final output to CSV...\")\n",
+    "    parent_dir = os.path.dirname(os.getcwd())\n",
+    "    event_dir = os.path.join(parent_dir, 'ShakeMaps', eventid)\n",
+    "    final_output_csv_path = os.path.join(event_dir, \"o3_building_clip_analysis.csv\")\n",
+    "    final_output.to_csv(final_output_csv_path, index=False)"
    ]
   },
   {
