--- a/WorkingScripts/o3_clip_eventdata_buildingstocks.ipynb
+++ b/WorkingScripts/o3_clip_eventdata_buildingstocks.ipynb
@@ -220,6 +220,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def merge_final_df(eventdata, df_output):\n",
+    "    \"\"\"\n",
+    "    Merge the final dataframe with the event data.\"\"\"\n",
+    "    final_output = pd.merge(eventdata, df_output, left_on='GEOID', right_on='CENSUSCODE', how='left')\n",
+    "    final_output.ffill(inplace=True)\n",
+    "    final_output.drop(columns=['CENSUSCODE'], axis=1, inplace=True)\n",
+    "    return final_output\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def building_clip_analysis(eventid):\n",
     "    # overall work flow\n",
     "    # 1. Read the event data\n",
@@ -236,16 +251,12 @@
     "    df_output = count_building_proportion(building_count, building_stock)\n",
     "    # 5. Merge the event data and the merged building count and building stock data\n",
     "    print(\"5. Merging event data with building data...\")\n",
-    "    final_output = pd.merge(eventdata, df_output, left_on='GEOID', right_on='CENSUSCODE', how='left')\n",
-    "    final_output.ffill(inplace=True)\n",
-    "    final_output.drop(columns=['CENSUSCODE'], axis=1, inplace=True)\n",
-    "    final_output.head()\n",
+    "    final_output = merge_final_df(eventdata, df_output)\n",
     "    # 6. Save the final output to the GeoPackage\n",
     "    print(\"6. Saving final output to GeoPackage...\")\n",
     "    layer_name = \"tract_shakemap_pga\"\n",
     "    save_to_geopackage(final_output, layer_name, eventid)\n",
     "    print(f\"Building clip analysis completed for event ID: {eventid}\")\n",
-    "\n",
     "    # 7. Save the final output to a CSV file\n",
     "    print(\"Saving final output to CSV...\")\n",
     "    parent_dir = os.path.dirname(os.getcwd())\n",
